--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,8 @@ requires = ["setuptools>=46.4.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "Couture_Cypher"
-version = "0.0.1"
+name = "CoutureCypher"
+version = "0.0.2"
 authors = [
   { name="Dominic Couture", email="d.paul.couture@gmail.com" },
 ]
